2000-09-19  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	* elf32-m68k.c (elf_cpu32_plt0_entry): Change the PLT entry 0
	instruction sequence to actually work.
	(elf_m68k_finish_dynamic_sections): Change the patch-in offset
	accordingly.

2000-09-18  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-sh.c (sh_elf_relocate_section): Use
	_bfd_final_link_relocate to apply the relocation against a section
	symbol, when doing relocatable links.

2000-09-18  Alan Modra  <alan@linuxcare.com.au>

	* elf32-hppa.c (elf32_hppa_stub_hash_entry): Rename input_section
	to id_sec.
	(stub_hash_newfunc): Here too.
	(hppa_add_stub): And here.
	(elf32_hppa_link_hash_table): Remove stub_section_created,
	reloc_section_created, first_init_sec and first_fini_sec.  Add
	stub_group.
	(elf32_hppa_link_hash_table_create): Init to suit.
	(hppa_get_stub_entry): Add support for grouping stub sections.
	(hppa_add_stub): Likewise.  Remove sec_count param and init/fini
	section code.  Index stub vars by section->id.
	(elf32_hppa_size_stubs): Likewise.  Remove duplicated function
	exit paths.  Zap allocation of above removed vars.  Refine
	link-once test.

	* elf32-hppa.h (elf32_hppa_size_stubs): Add output_bfd param.
	* elf32-hppa.c (elf32_hppa_size_stubs): Likewise.
	(hppa_get_stub_entry): Pass in pointer to elf32_hppa_link_hash_table
	rather than pointer to bfd_link_info.
	(hppa_add_stub): Likewise.
	(final_link_relocate): Likewise.

2000-09-17  David Huggins-Daines  <dhd@linuxcare.com>

	(elf32_hppa_size_stubs): Don't try to build stubs for discarded
	link-once sections.

2000-09-16  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-sh.c (ELF_MAXPAGESIZE): Define to 128, to match
	ld/emulparams/shelf.sh.

2000-09-10  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	* elf32-m68k.c (bfd_m68k_elf32_create_embedded_relocs): New function.
	* bfd-in.h (bfd_m68k_elf32_create_embedded_relocs): Add declaration.
	* bfd-in2.h: Regenerate.

2000-09-15  Kenneth Block  <Kenneth.Block@compaq.com>
